# novareel

./: .dockerignore  .env.example  .env.production.example  .gitignore  Makefile  NovaReel_Amazon_Nova_Hackathon_Plan.docx  NovaReel_Amazon_Nova_Hackathon_Plan.md  README.md  amplify.yml  package-lock.json  package.json
services/backend/: .env.production.example  README.md  celery_config.py  load_test_stub.md  pyproject.toml  test_nova_reel_integration.py  validate_novareel.py  worker.py
services/backend/app/: __init__.py  auth.py  config.py  dependencies.py  main.py  models.py  tasks.py
services/backend/app/api/: __init__.py  v1.py
services/backend/app/config/: __init__.py  languages.py
services/backend/app/queue/: __init__.py  base.py  factory.py  noop.py  sqs.py
services/backend/app/repositories/: __init__.py  base.py  dynamo.py  factory.py  local.py
services/backend/app/services/: __init__.py  audio.py  brand.py  broll_director.py  effects.py  image_generator.py  metadata.py  music.py  nova.py  nova_reel.py  orchestrator.py  parallel.py  pipeline.py  pipeline_translate.py  pipeline_variants.py  (+8 more)
services/backend/novareel_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/backend/prompt_templates/: comparison.yaml  how_to.yaml  luxury.yaml  problem_solution.yaml  product_showcase.yaml  seasonal.yaml  testimonial.yaml  unboxing.yaml
services/backend/scripts/: migrate_results_table.py  weekly_invoices.py
services/backend/tests/: test_api.py  test_broll_director.py  test_editing_framework.py  test_phase2.py  test_phase3.py  test_repository.py
(+115 files in other folders)
